# gara

./: .dockerignore  .env.example  .gitignore  CMakeLists.txt  DEPLOYMENT.md  Dockerfile  GITHUB_ACTIONS_IMPROVEMENTS.md  PRIORITY_IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  TESTING.md  TEST_QUALITY_ANALYSIS.md  TEST_REFACTORING_SUMMARY.md  openapi.yaml  test_api.sh
.github/workflows/: test-improved.yml.example  test.yml
docs/: LOGGING_METRICS.md  LOGGING_MIGRATION_PLAN.md  MIGRATION_STATUS.md  README.md  api.html
scripts/: run_tests.sh
src/: main.cpp
src/constants/: album_constants.h
src/controllers/: album_controller.cpp  album_controller.h  image_controller.cpp  image_controller.h
src/db/: dynamodb_client.cpp  dynamodb_client.h  mysql_client.cpp  mysql_client.h  schema.sql  schema_dynamodb.json  schema_mysql.sql  sqlite_client.cpp  sqlite_client.h
src/exceptions/: album_exceptions.h
src/interfaces/: config_service_interface.h  database_client_interface.h  dynamodb_client_interface.h  file_service_interface.h
src/mappers/: album_mapper.h
src/middleware/: auth_middleware.cpp  auth_middleware.h  request_context_middleware.h
src/models/: album.cpp  album.h  image_metadata.cpp  image_metadata.h  watermark_config.h
src/services/: album_service.cpp  album_service.h  cache_manager.cpp  cache_manager.h  dynamodb_client_wrapper.h  image_processor.cpp  image_processor.h  local_config_service.cpp  local_config_service.h  local_file_service.cpp  local_file_service.h  s3_service.cpp  s3_service.h  secrets_service.cpp  secrets_service.h  watermark_service.cpp  watermark_service.h
src/utils/: file_utils.cpp  file_utils.h  id_generator.cpp  id_generator.h  logger.cpp  logger.h  metrics.cpp  metrics.h
tests/: CMakeLists.txt  error_handling_test.cpp  integration_test.cpp
tests/controllers/: album_controller_test.cpp  image_controller_test.cpp
tests/db/: dynamodb_client_test.cpp  mysql_client_test.cpp
tests/mappers/: album_mapper_test.cpp
tests/middleware/: auth_middleware_test.cpp
tests/mocks/: fake_database_client.h  fake_dynamodb_client.h  fake_file_service.h  mock_dynamodb_client.h  mock_s3_service.h
tests/services/: album_service_test.cpp  cache_manager_test.cpp  image_processor_test.cpp  s3_service_test.cpp  secrets_service_test.cpp  watermark_service_test.cpp
tests/test_helpers/: custom_matchers.h  test_builders.h  test_constants.h  test_file_manager.h
tests/utils/: file_utils_test.cpp  id_generator_test.cpp
